* Added `bnsfc-container` wrapper CSS element * Added `bnsfc-widget-title` class * Added `bnsfc_no_posts_message` hook to no posts message * Added option to only show posts from child categories * Added a "wish link" and "support_link" to the plugin meta row * Code Reformatting to better match current WordPress Coding Standards * Extracted code to create `plugin_data` method * Moved BNSFC Plugin Meta function into main class of plugin * Raised required version to WordPress 3.6 * Updates to the `readme.txt` documentation
git-svn-id: https://plugins.svn.wordpress.org/bns-featured-category/trunk@884258 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/bnsfc-option-style.css
+++ b/bnsfc-option-style.css
@@ -1,7 +1,7 @@
 /*  This file is part of BNS Featured Category
     Last revised at version 2.0
 
-    Copyright 2009-2013  Edward Caissie  (email : edward.caissie@gmail.com)
+    Copyright 2009-2014  Edward Caissie  (email : edward.caissie@gmail.com)
 
     BNS Featured Category is free software; you can redistribute it and/or
     modify it under the terms of the GNU General Public License, version 2, as
@@ -22,14 +22,20 @@
         Boston, MA  02110-1301  USA
 */
 table.bnsfc-counts,
-table.bnsfc-thumbnails { width: 100%; }
+table.bnsfc-thumbnails {
+	width: 100%;
+}
 
 .bnsfc-all-options-open,
 .bnsfc-more-options-open,
 .bnsfc-thumbnails-open,
-.bnsfc-excerpt-option-open { display: block; }
+.bnsfc-excerpt-option-open {
+	display: block;
+}
 
 .bnsfc-all-options-closed,
 .bnsfc-more-options-closed,
 .bnsfc-thumbnails-closed,
-.bnsfc-excerpt-option-closed { display: none; }
+.bnsfc-excerpt-option-closed {
+	display: none;
+}
