* Add new constants for use with plugin path and URL functionality * Added CSS wrapper class to separate shortcode style elements from widget usage * Added new option "Featured Image First" to display before balance of post * Added new style enqueue statement to read from update safe folder * Added sanity check to ensure there are "child categories" to display * Fixed sort order implementation * Updated inline documentation * Updated `readme.txt`
git-svn-id: https://plugins.svn.wordpress.org/bns-featured-category/trunk@975966 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/bnsfc-style.css
+++ b/bnsfc-style.css
@@ -1,6 +1,6 @@
 /**
  * This file is part of BNS Featured Category
- * Last revised at version 1.9.2
+ * Last revised at version 2.7
  *
  * Copyright 2009-2014  Edward Caissie  (email : edward.caissie@gmail.com)
  *
@@ -45,4 +45,9 @@ a.bnsfc-link:active {
 .post .widget.bns-featured-category h2 {
 	background: none;
 	width: 100%;
+}
+
+.bnsfc-shortcode .bnsfc-featured-image-first a img {
+	float: left;
+	margin-right: 10px;
 }
